--- a/build.gradle
+++ b/build.gradle
@@ -29,11 +29,9 @@ ext['springCloudVersion'] = 'Greenwich.M3'
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-actuator')
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-	//implementation('org.springframework.boot:spring-boot-starter-groovy-templates')
+	implementation('org.springframework.boot:spring-boot-starter-groovy-templates')
 	implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
 	implementation('org.springframework.boot:spring-boot-starter-web')
-	implementation('org.springframework.cloud:spring-cloud-starter-oauth2')
-	implementation('org.springframework.cloud:spring-cloud-starter-security')
 	implementation("io.springfox:springfox-swagger2:2.7.0")
 	implementation("io.springfox:springfox-swagger-ui:2.7.0")
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
